# csv-excel

./: .gitignore  DEVELOPERS.md  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
csv-excel/: __main__.py
csv_excel/: __main__.py  csv_excel.py
csv_excel/rules/: nospaces.py  unique_id.py
csv_excel/test/: test_csv_excel.py
examples/parameter_db/: README.md  cli.py  config.yml  csv2xl.bat  requirements.txt  validate_invalid.bat  validate_valid.bat
examples/parameter_db/rules/: nospaces.py  param_memory_map.py  unique_id.py
examples/parameter_db/worksheets/: invalid NV Memory.csv  invalid Parameters.csv  valid Parameters.csv
examples/parameter_db/worksheets/invalid/: Parameters.csv
examples/parameter_db/worksheets/valid/: NV Memory.csv  Parameters.csv
examples/simple/: README.md  cli.py  requirements.txt
